// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileAttachmentEntry> default props 1`] = `
<div>
  <div
    class="attached-file--container"
  >
    <span
      class="fa fa-times-circle file-upload__remove--icon"
      title="Remove file"
    />
    <span
      class="fa fa-file-text attached-file--icon attached-file--bottom-spacing"
    />
    Test files
  </div>
</div>
`;

exports[`<FileAttachmentEntry> no deletion 1`] = `
<div>
  <div
    class="attached-file--container"
  >
    <span
      class="fa fa-file-text attached-file--icon attached-file--bottom-spacing"
    />
    Test files
  </div>
</div>
`;

exports[`<FileAttachmentEntry> with deleteTitleText 1`] = `
<div>
  <div
    class="attached-file--container"
  >
    <span
      class="fa fa-times-circle file-upload__remove--icon"
      title="Delete me"
    />
    <span
      class="fa fa-file-text attached-file--icon attached-file--bottom-spacing"
    />
    Test files
  </div>
</div>
`;

exports[`<FileAttachmentEntry> with downloadUrl 1`] = `
<div>
  <div
    class="attached-file--container"
  >
    <span
      class="fa fa-file-text attached-file--icon attached-file--bottom-spacing"
    />
    <strong>
      <a
        href="http://get/me/my/file"
        title="Test files"
      >
        <div
          class="file-listing-filename"
        >
          Test files
        </div>
      </a>
    </strong>
  </div>
</div>
`;
